kubernetes/youtube-tutorials/traefik/dash/middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basicauth-youtube
  namespace: traefik
spec:
  basicAuth:
    secret: traefik-dashboard-auth-youtube
