kubernetes/youtube-tutorials/traefik/dash/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.homelab.lan`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      # middlewares:
      #   - name: traefik-dashboard-basicauth-youtube
      #     namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
